Adjust style for guilabel and menuselection - Remove border - Adjust padding to avoid letters that go below the line (j, p, q, etc.) from touching the edge of the padding - Increase size for legibility, reducing jaggies from anti-aliasing

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -204,11 +204,12 @@ li.nav-item.toc-entry {
   margin-bottom: 0.25em;
 }
 
-.guilabel, .menuselection {
-  border: 1px solid #7fbbe3;
+span.guilabel, span.menuselection {
+  border: none;
   background: #e7f2fa;
   border-radius: 4px;
-  padding: 2.4px 6px;
+  padding: 4px 5px;
+  font-size: 90%;
   font-weight: bold;
   font-style: italic;
 }
